--- a/public/index.html
+++ b/public/index.html
@@ -8,39 +8,10 @@
 </head>
 <body>
 
-  <script type="text/x-handlebars">
-    {{outlet}}
-  </script>
-
-  <script type="text/x-handlebars" data-template-name="index">
-    <nav>
-      {{#linkTo "index"}}Index{{/linkTo}}
-      {{#linkTo "login"}}Log In{{/linkTo}}
-      {{#linkTo "logout"}}Log Out{{/linkTo}}
-    </nav>
-    <ul>
-    {{#each item in model}}
-      <li>{{item}}</li>
-    {{/each}}
-    </ul>
-  </script>
-
-  <script type="text/x-handlebars" data-template-name="login">
-    <nav>
-      {{#linkTo "index"}}Index{{/linkTo}}
-    </nav>
-  </script>
-
-  <script type="text/x-handlebars" data-template-name="logout">
-    <nav>
-      {{#linkTo "index"}}Index{{/linkTo}}
-    </nav>
-  </script>
-
   <script src="js/libs/jquery-1.9.1.js"></script>
-  <script src="js/libs/handlebars-1.0.0-rc.3.js"></script>
-  <script src="js/libs/ember-1.0.0-rc.2.js"></script>
-  <script src="js/libs/ember-data.js"></script>
+  <script src="js/libs/underscore.js"></script>
+  <script src="js/libs/json2.js"></script>
+  <script src="js/libs/backbone.js"></script>
   <script src="js/successwhale.js"></script>
 
 </body>
