--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,13 @@
       <h4 class="columnheading" data-bind="text: title"></h4>
       <!-- ko foreach: items -->
         <div class="item">
-          <div class="item-text" data-bind="html: makeHTML(content)"></div>
-          <div class="item-fromuser" data-bind="text: content.fromuser"></div>
+          <div class="item-text" data-bind="html: makeItemTextHTML(content)"></div>
+          <div class="item-fromuser">
+            <img class="item-fromuseravatar" data-bind="attr:{src: content.fromuseravatar}" />
+            <div class="item-fromusername" data-bind="text: makeFromUserText(content)"></div>
+            <div class="item-time" data-bind="text: moment(content.time).fromNow()"></div>
+            <div class="clear"></div>
+          </div>
         </div>
       <!-- /ko -->
     </div>
@@ -32,6 +37,7 @@
   <script src="js/libs/cookies.js"></script>
   <script src="js/libs/jquery-1.9.1.js"></script>
   <script src="js/libs/knockout-2.2.1.js"></script>
+  <script src="js/libs/moment.min.js"></script>
   <script src="js/successwhale.js"></script>
 
 </body>
