--- a/public/index.html
+++ b/public/index.html
@@ -17,13 +17,13 @@
       </div>
     </form>
   </div>
-  <div id="columns" data-bind="foreach: columns">
-    <div data-bind="name: fullpath, style: { width: 95/$parent.colsPerScreen() + '%' }" class="column">
+  <div id="columns" data-bind="foreach: columns, style: { width: (columns().length/colsPerScreen()*100) + '%'}">
+    <div data-bind="name: fullpath, style: { width: 95/$parent.columns().length + '%' }" class="column">
       <h4 class="columnheading" data-bind="text: title"></h4>
       <!-- ko foreach: items -->
         <div class="item">
           <div class="item-text" data-bind="html: makeItemTextHTML(content)"></div>
-          <div class="item-fromuser">
+          <div class="item-fromuser" data-bind="css: 'item-fromuser-'+service">
             <img class="item-fromuseravatar" data-bind="attr:{src: content.fromuseravatar}" />
             <div class="item-fromusername" data-bind="text: makeFromUserText(content)"></div>
             <div class="item-time" data-bind="text: moment(content.time).fromNow()"></div>
