Link up usernames and hashtags in tweets

--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,7 @@
   <script src="js/libs/jquery-1.9.1.js"></script>
   <script src="js/libs/knockout-2.2.1.js"></script>
   <script src="js/libs/moment.min.js"></script>
+  <script src="js/libs/twitter-entities.js"></script>
   <script src="js/successwhale.js"></script>
 
 </body>
