--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
+  <div id="errorbox"></div>
   <div id="header">
     <form id="postform">
       <input type="text" id="postentry"/>
