--- a/public/login.html
+++ b/public/login.html
@@ -5,6 +5,8 @@
   <title>Log In to SuccessWhale</title>
   <link rel="stylesheet" href="css/normalize.css"/>
   <link rel="stylesheet" href="css/style.css"/>
+  <link rel="icon" href="img/favicon.ico" type="image/x-icon"/>
+  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon"/>
 </head>
 <body>
 
