Added XDomainRequest support for jQuery.ajax(), allowing CORS requests on IE8/9.

--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,7 @@
   </div>
     
   <script src="js/libs/cookies.js"></script>
+  <script src="js/libs/xdr.js"></script>
   <script src="js/libs/jquery-1.9.1.js"></script>
   <script src="js/libs/knockout-2.2.1.js"></script>
   <script src="js/libs/moment.min.js"></script>
