Added attachment button, tweaked text sizes for Chrome

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
     <form id="postform">
       <textarea id="postentry" rows="1"></textarea>
       <span id="postbutton">Post</span>
+      <span id="attachbutton" data-popover="attachment"><span class="icon">&#x1f4ce;</span></span>
       <span id="postbuttondropdown" data-popover="accountselector">&#x25BC;</span>
       <div id="accountselector" class="gpopover">
         <p>Post to:</p>
