Log Out button and styling for the login page

--- a/public/client.html
+++ b/public/client.html
@@ -13,6 +13,9 @@
 <body>
   <div id="errorbox"></div>
   <div id="header">
+    <div id="topmenu">
+      <a id="logoutbutton" href="#">Log out</a>
+    </div>
     <form id="postform">
       <textarea id="postentry" rows="1"></textarea>
       <span id="postbutton">Post</span>
