File attachment working, changing 'post to' accounts fixed

--- a/public/client.html
+++ b/public/client.html
@@ -17,10 +17,10 @@
     <div id="topmenu">
       <a id="logoutbutton" href="#">&#x1f6aa;</a>
     </div>
-    <form id="postform" action="https://successwhale-api.herokuapp.com/v3/item" method="post" enctype="multipart/form-data" target="postTarget">
+    <form id="postform" method="post">
       <input id="token" name="token" type="hidden" data-bind="value: token"/>
-      <input id="postToAccounts" name="accounts" type="hidden" data-bind="value: getPostToAccountsString()"/>
-      <textarea id="postentry" name="text" rows="1" data-bind="value: postEntryText"></textarea>
+      <input id="postToAccounts" name="accounts" type="hidden" data-bind="value: postToAccountsString()"/>
+      <textarea id="postentry" name="text" rows="1"></textarea>
       <span id="postbutton">Post</span>
       <span id="attachbutton" data-popover="attachmentdialog"><span class="icon">&#x1f4ce;</span></span>
       <div id="attachmentdialog" class="gpopover">
@@ -58,7 +58,6 @@
       <!-- /ko -->
     </div>
   </div>
-  <iframe id="postTarget" name="postTarget" style="display: none"></iframe>
     
   <script src="js/libs/cookies.js"></script>
   <script src="js/libs/xdr.js"></script>
@@ -68,6 +67,7 @@
   <script src="js/libs/twitter-entities.js"></script>
   <script src="js/libs/jquery.gpopover.js"></script>
   <script src="js/libs/jquery.autosize.min.js"></script>
+  <script src="js/libs/jquery.form.min.js"></script>
   <script src="js/successwhale.js"></script>
 
 </body>
