Add 'loading' overlay on first load before any data is displayed

--- a/public/client.html
+++ b/public/client.html
@@ -58,6 +58,7 @@
       <!-- /ko -->
     </div>
   </div>
+  <div class="modal"></div>
     
   <script src="js/libs/cookies.js"></script>
   <script src="js/libs/xdr.js"></script>
