--- a/public/client.html
+++ b/public/client.html
@@ -15,20 +15,20 @@
   <div id="errorbox"></div>
   <div id="header">
     <div id="topmenu">
-      <a id="logoutbutton" href="#">&#x1f6aa;</a>
+      <a id="logoutbutton" href="#"><img src="img/ui/logout.png" title="Logout" alt="Logout" /></a>
     </div>
     <form id="postform" method="post">
       <input id="token" name="token" type="hidden" data-bind="value: token"/>
       <input id="postToAccounts" name="accounts" type="hidden" data-bind="value: postToAccountsString()"/>
       <textarea id="postentry" name="text" rows="1"></textarea>
       <span id="postbutton">Post</span>
-      <span id="attachbutton" data-popover="attachmentdialog"><span class="icon">&#x1f4ce;</span></span>
+      <span id="attachbutton" data-popover="attachmentdialog"><span class="icon"><img src="img/ui/attach.png" title="Attach Photo" alt="Attach Photo" /></span></span>
       <div id="attachmentdialog" class="gpopover">
         <p>Attach file:</p>
           <input type="file" name="file" id="filetoupload"/>
           <input type="button" id="fileclearbutton" value="Clear"/>
       </div>
-      <span id="postbuttondropdown" data-popover="accountselector">&#x25BC;</span>
+      <span id="postbuttondropdown" data-popover="accountselector"><span class="icon"><img src="img/ui/downarrow.png" title="Select accounts to post to" alt="Select accounts to post to" /></span>
       <div id="accountselector" class="gpopover">
         <p>Post to:</p>
         <ul data-bind="foreach: postToAccounts">
