--- a/public/client.html
+++ b/public/client.html
@@ -52,33 +52,34 @@
             <div class="item-fromusername" data-bind="text: makeFromUserText(content, service)"></div>
             <div class="item-time" data-bind="text: moment(content.time).fromNow()"></div>
             <div class="actionsdropdown" data-bind="attr:{ 'data-popover': 'actions-' + hashCode(service + content.id) }">
-              <img src="img/ui/downarrow2.png" title="Action menu" alt="Action menu" />
+              <img src="img/ui/downarrow2.png" title="Action menu" alt="Action menu" data-bind="click: function(item) { $('div#actions-' + hashCode(item.service + item.content.id)).toggle('fast'); }" />
             </div>
-            <div class="gpopover actionsgpopover" data-bind="attr:{ id: 'actions-' + hashCode(service + content.id) }">
-              <ul data-bind="foreach: content.actions">
+            <div class="item-metadata" data-bind="html: makeMetadataText(content)"></div>
+            <div class="actionsdiv" data-bind="attr:{ id: 'actions-' + hashCode(service + content.id) }">
+              <ul class="actionlist" data-bind="foreach: content.actions">
                 <!-- ko if: (name == 'reply') -->
                 <li>
                   <span class="actionbutton" onclick="">Reply</span>
                 </li>
                 <!-- /ko -->
+                <!-- ko if: (name == 'conversation') -->
+                <li>
+                  <span class="actionbutton" onclick="">Thread</span>
+                </li>
+                <!-- /ko -->
                 <!-- ko if: (name == 'retweet') -->
                 <li>
-                  <span class="actionbutton" data-bind="click: function(action) { performAction(action.params);} ">Retweet</span>
+                  <span class="actionbutton" data-bind="click: function(action) { performAction(action.params);} ">RT</span>
                 </li>
                 <!-- /ko -->
                 <!-- ko if: (name == 'favorite') -->
                 <li>
-                  <span class="actionbutton" onclick="click: function(action) { performAction(action.params);} ">Favorite</span>
+                  <span class="actionbutton" data-bind="click: function(action) { performAction(action.params);} ">Favorite</span>
                 </li>
                 <!-- /ko -->
                 <!-- ko if: (name == 'like') -->
                 <li>
-                  <span class="actionbutton" onclick="click: function(action) { performAction(action.params);} ">Like</span>
-                </li>
-                <!-- /ko -->
-                <!-- ko if: (name == 'conversation') -->
-                <li>
-                  <span class="actionbutton" onclick="">Conversation</span>
+                  <span class="actionbutton" data-bind="click: function(action) { performAction(action.params);} ">Like</span>
                 </li>
                 <!-- /ko -->
                 <!-- ko if: (name == 'delete') -->
@@ -88,7 +89,6 @@
                 <!-- /ko -->
               </ul>
             </div>
-            <div class="item-metadata" data-bind="html: makeMetadataText(content)"></div>
             <div class="clear"></div>
           </div>
           <div class="item-text" data-bind="html: makeItemTextHTML(content)"></div>
